--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,9 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    roomVersion = '2.5.0'
+    lifecycle_version = '2.5.0'
+
+}
